# chatbot-model-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260716_0001_initial_schema.py
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/routes/: chat.py  documents.py  health.py
app/core/: config.py  exceptions.py
app/db/: models.py  repositories.py  session.py
app/schemas/: chat.py  document.py
app/services/: embedding_service.py  external_search_service.py  groq_llm_service.py  isi_scope.py  pdf_extractor.py  rag_service.py  text_chunker.py  vector_search_service.py
app/workers/: __init__.py  ingestion.py
docs/: isi_document_demo.html  isi_document_demo.md  questions_test_chatbot_isi.md
scripts/: preload_models.py  seed_demo.py
streamlit_app/: main.py
tests/integration/: test_app_routes.py
tests/unit/: test_external_search_service.py  test_groq_llm_service.py  test_isi_scope.py  test_rag_service.py  test_text_chunker.py  test_vector_source.py
